--- a/flexbox/11-article.html
+++ b/flexbox/11-article.html
@@ -7,11 +7,11 @@
         <meta name="description" content="Description of the page less than 150 characters">
         <link rel="icon" type="image/jpg" href="../images/favicon.jpg">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="0-styles.css">
+        <link rel="stylesheet" href="11-styles.css">
     </head>
     <body>
         <!– Header –>
-        <header class="hero-article" data-section-theme="dark">
+        <header class="header" data-section-theme="dark">
         <div class="container">
             <div class="header-container">
             <div class="header-logo">
@@ -50,10 +50,12 @@
         <!– Main –>
         <main>
         <!– Hero section –>
-        <header class="section-hero" data-section-theme="dark">
+        <header class="hero-article" style="background-image: url(images/pic-article-02.jpg);" data-section-theme="dark">
             <div class="container">
             <div class="section-body">
                 <section class="section-inner">
+                    <span class="section-category">Digital Life</span>
+                    <h1 class="section-title">Ut alios omittam, hunc appello, quem ille unum secutus est</h1>
                 </section>
             </div>
             </div>
