--- a/flexbox/11-article.html
+++ b/flexbox/11-article.html
@@ -54,8 +54,9 @@
             <div class="container">
             <div class="section-body">
                 <section class="section-inner">
-                    <span class="section-category">Digital Life</span>
+                    <span class="section-category">Digital Life
                     <h1 class="section-title">Ut alios omittam, hunc appello, quem ille unum secutus est</h1>
+                    </span>
                 </section>
             </div>
             </div>
