--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -80,8 +80,12 @@
                             Morbi pharetra congue ante ac tincidunt. Donec euismod eu mauris nec laoreet. Praesent id sodales ipsum. Aliquam erat volutpat. Ut porta sem eget libero faucibus, eget convallis nisi finibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum accumsan euismod nunc quis viverra.
                         </p>
                         <figure>
-                            <img src="images/the-honest-company-j69c0Q650Hw-unsplash.jpg" alt="Glasses, baby converse shoes, black bag, wipes on a dresser with an open drawer" width="620" height="350">
-                            <figcaption class="img-caption">Pugnant Stoici cum Peripateticis. Prioris generis est docilitas</figcaption>
+                            <img
+                            src="images/the-honest-company-j69c0Q650Hw-unsplash.jpg"
+                            alt="Glasses, baby converse shoes, black bag, wipes on a dresser with an open drawer"
+                            width="620"
+                            height="350"
+                            />                            <figcaption class="img-caption">Pugnant Stoici cum Peripateticis. Prioris generis est docilitas</figcaption>
                         </figure>
                         <p>Quare conare, quaeso. Dici enim nihil potest verius. Primum divisit ineleganter; Suam denique cuique naturam esse ad vivendum ducem.</p>
                         <blockquote cite="https://www.holbertonschool.com/"> Ego autem tibi, Piso, assentior usu hoc venire, ut acrius aliquanto et attentius de claris viris locorum admonitu cogitemus.</blockquote>
