--- a/form/05-article.html
+++ b/form/05-article.html
@@ -169,10 +169,8 @@
                             <span class="form-field-container">
                             <input type="text" name="your-last-name" id="your-last-name" placeholder="e.g. Smith" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on" accesskey="l" required>
                             <i class="form-field-icon"></i>
-                        <p class="form-help">Last name should be at least 3 characters and only contains letters</p>
-
                         </span>
-                    
+                        <p class="form-help">Last name should be at least 3 characters and only contains letters</p>
                     </div> 
                     </div>
                     <div class="form-group col-2-3">
@@ -180,11 +178,9 @@
                         <div class="form-field"><span class="form-field-container">
                             <input type="email" name="your-email" id="your-email" placeholder="e.g. youremail@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="55" autocomplete="on" accesskey="e" required>
                             <i class="form-field-icon"></i>
-
-                        </span></div> 
-
+                        </span>
+                    </div> 
                     </div>
-
                 </fieldset>
                 <fieldset>
                     <legend class="visually-hidden">Your comment</legend>
@@ -194,7 +190,6 @@
                             <span class="form-field-container">
                             <input type="text" name="your-title" id="your-title" placeholder="e.g. I loved that article" pattern="[A-Za-zÀ-ž\s]{4,}" maxlength="75" autocomplete="on" accesskey="t" required>
                             <i class="form-field-icon"></i>
-
                         </span>
                         <p class="form-help">Title should be at least 4 characters and only contains letters</p>
                     </div>  
@@ -204,10 +199,8 @@
                         <div class="form-field"><span class="form-field-container">
                             <textarea name="your-comment" id="your-comment" cols="30" rows="6" placeholder="Write your comment here" minlength="10" accesskey="c" required></textarea>
                             <i class="form-field-icon"></i>
-
                         </span>
                         <p class="form-help">Comment should be at least 10 characters</p>
-
                     </div>  
                     </div>
                     <div class="form-group">
