--- a/form/02-article.html
+++ b/form/02-article.html
@@ -154,6 +154,7 @@
                             Your personal information
                         </legend>
                         <div class="form-group col-1-2"></div>
+                        <div class="form-group col-1-2"></div>>
                         <div class="form-group col-2-3"></div>
 
                     </fieldset>
